<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticeApp1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Show Calendar,Set Reminder</string>
    <string name="call">Make a Call</string>
    <string name="browser">Open Bowser</string>
    <string name="addressbook">Manage Address Book</string>
    <string name="location">Show my Location, Take me Somewhere</string>
    <string name="message">SEND-READ SMS Messages</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="reminder">Add Reminder</string>
    <string name="saveReminder">Save Reminder</string>
    <string name="description">Description</string>
    <string name="title_activity_my_calendar">MyCalendar</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="read_messages">show/READ my SMS messages</string>
    <string name="compose_message">Compose SMS</string>
    <string name="title_activity_message_dialog">MessageDialog</string>
    <string name="sms_txt">SMS Text</string>
    <string name="title_activity_address_book">AddressBookActivity</string>
    <string name="message_send">Send Message</string>
    <string name="title_activity_messages_list">MessagesList</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="title_activity_map_dialog">MapDialog</string>

</resources>
