<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:background="@drawable/button_background"
            style="@style/ButtonsStyle"
            android:text="@string/call"
            android:id="@+id/onCall"/>

        <Button
            style="@style/ButtonsStyle"
            android:background="@drawable/button_background"
            android:text="@string/calendar"
            android:id="@+id/onCalendar"/>

        <Button
            style="@style/ButtonsStyle"
            android:background="@drawable/button_background"
            android:text="@string/browser"
            android:id="@+id/onBrowser" />

        <Button
            style="@style/ButtonsStyle"
            android:background="@drawable/button_background"
            android:text="@string/addressbook"
            android:id="@+id/onAddressBook"/>

        <Button
            style="@style/ButtonsStyle"
            android:background="@drawable/button_background"
            android:text="@string/location"
            android:id="@+id/onLocation"/>

        <Button
            style="@style/ButtonsStyle"
            android:background="@drawable/button_background"
            android:text="@string/message"
            android:id="@+id/onMessage"/>

    </LinearLayout>
</RelativeLayout>
